# ai_agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  example.env  main.py  makefile  pyproject.toml
.github/workflows/: build-push-ecr.yml
agent/: __init__.py  app.py  cli.py  requirements.txt
agent/api/: __init__.py  api.py  api_runs.py  handler.py  router.py
agent/api/agent/: __init__.py  api_agent.py
agent/api/auth/: dependencies.py  router.py  service_auth.py
agent/api/chat_ws/: __init__.py  websocket_server.py
agent/api/session/: __init__.py  api_session.py
agent/core/: __init__.py  config.py  config_gunicorn.py
agent/service/: __init__.py  agent_manager.py  session_manager.py  session_store.py  websocket_handler.py
agent/service/agent/: __init__.py  workspace.py
agent/service/browser/: __init__.py  auth_provider.py  browser_manager.py  cdp_event_listener.py  (+9 more)
agent/shared/: __init__.py
agent/utils/: __init__.py  constants.py  retry.py  snowflake.py  utils.py
data/agents/: index.json
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: websocket-session-flow.md
docs/digital-kb/: api.md  architecture.md  backend.md  data-model.md  frontend.md  implementation-order.md  skills.md
docs/guides/: multi-user-skills-design.md  workspace-architecture.md
docs/ui-testing-agent/: README.md  architecture.md  deployment.md  development.md  frontend.md  mcp-tools-reference.md  workflows.md
web/: Dockerfile  README.md  example.env  package-lock.json  package.json  tsconfig.json
web/src/: middleware.ts
(+215 files in other folders)
